--- a/index.htm
+++ b/index.htm
@@ -20,14 +20,77 @@
 
     <!-- End os Banner section -->
     <!-- start of Our Featured Flowers section -->
-    <section>
+    <!-- <section>
         <div class="featured-text">
-            <h3  class="featured-heading">Our Featured Flowers section</h3>
+            <h3  class="featured-heading">Our Featured Flowers</h3>
             <p class="featured-line">It is a long established fact that a reader will be distracted by the
                  readable content of a page when looking at its layout.</p>
         </div>
-        <div> </div>
-    </section>
+        <div class="featured-image">
+            <figure class="featured-img-style" >
+                <img src="./Flower Asset/pngwing 5.png" alt="Image of Flower">
+                <figcaption> Pink Flower Tree </figcaption>
+              </figure>
+              <figure class="featured-img-style" >
+                <img src="./Flower Asset/pngwing 6.png" alt="Image of Flower">
+                <figcaption> Pink Flower Tree </figcaption>
+              </figure>
+              <figure class="featured-img-style" >
+                <img src="./Flower Asset/pngwing 7.png" alt="Image of Flower">
+                <figcaption> Pink Flower Tree </figcaption>
+              </figure>
+        </div>
+    </section> -->
+    <!-- ENd of Our Featured Flowers section -->
+    <!-- ------------second section head line---------- -->
+<section>
+    <div class="second-width">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <h1 class="holl"> <span class="dream">Our Featured Flowers</span></h1>
+        <p class="featured-line">
+            It is a long established fact that a reader will be distracted by the readable <br>
+            content of a page when looking at its layout
+        </p>
+    </div>
+</section>
+<!-- ------------------------second section head line end----------- -->
+
+<!-- -----------------------featurtes photo box start---------------- -->
+
+ <section class="featured">
+
+    <div class="first-box">
+        <img src="Flower Asset/pngwing 6.png" alt="" />
+        <p>
+            Pink Flower Tree
+        </p>
+    </div>
+    <div class="second-box">
+        <img src="Flower Asset/pngwing 5.png" alt="" />
+        <p>
+            Pink Flower Tree
+        </p>
+        
+    </div>
+    <div class="third-box">
+        <img src="Flower Asset/pngwing 7.png" alt="" />
+        <p>
+            Pink Flower Tree
+        </p>
+        
+    </div>
+</section>
+<!-- -----------------------features photo box end-------------------- -->
+<!-- start of footer -->
+<footer class="footer-section">
+    <h1 class="footer-heading"><span class="footer-flower">Flower</span>Shop</h1>
+    <p class="footer-paragraph">It is a long established fact that a reader will be distracted by the readable content of 
+        a page when looking at its layout.</p>
+    <p class="footer-copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+</footer>
+<!-- end of footer -->
 
 </body>
 </html>
