Added hot deals section

--- a/index.htm
+++ b/index.htm
@@ -83,6 +83,19 @@
     </div>
 </section>
 <!-- -----------------------features photo box end-------------------- -->
+<!-- start Hot deals section -->
+<section class="hot-deals">
+    <div class="hot-deals-div">
+        <h1 class="hot-deals-heading">Hot Deal ! Sale Up To <span class="hot-deals-cc">25%</span> Off</h1>
+        <p class="hot-deals-paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <button class="hot-deeals-button">Sign Up</button>
+    </div>
+    <img class="hot-deals-img" src="./Flower Asset/pngwing 8.png" alt="Img of a Flower">
+</section>
+<!-- end Hot deals section -->
+<!-- Start instagram section -->
+
+<!-- End instagram Section -->
 <!-- start of footer -->
 <footer class="footer-section">
     <h1 class="footer-heading"><span class="footer-flower">Flower</span>Shop</h1>
