added instagram section

--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,19 @@
 </section>
 <!-- end Hot deals section -->
 <!-- Start instagram section -->
-
+<section class="instagram">
+    <div class="instagram-div">
+        <h3 class="instagram-name">Instagram</h3>
+        <p class="instagram-paragraph">It is a long established fact that a reader will be distracted by the readable content of
+         a page when looking at its layout.</p>
+    </div>
+    <div class="instagram-img-div">
+        <img class="instagram-img" src="./Flower Asset/Flower 01.png" alt="">
+        <img class="instagram-img" src="./Flower Asset/Rectangle 4.png" alt="">
+        <img class="instagram-img" src="./Flower Asset/Rectangle 5.png" alt="">
+        <img class="instagram-img" src="./Flower Asset/Rectangle 6.png" alt="">
+    </div>
+</section>
 <!-- End instagram Section -->
 <!-- start of footer -->
 <footer class="footer-section">
