--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FLOWER SHOP</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- banner section -->
@@ -18,30 +21,7 @@
         </div>
     </section>
 
-    <!-- End os Banner section -->
-    <!-- start of Our Featured Flowers section -->
-    <!-- <section>
-        <div class="featured-text">
-            <h3  class="featured-heading">Our Featured Flowers</h3>
-            <p class="featured-line">It is a long established fact that a reader will be distracted by the
-                 readable content of a page when looking at its layout.</p>
-        </div>
-        <div class="featured-image">
-            <figure class="featured-img-style" >
-                <img src="./Flower Asset/pngwing 5.png" alt="Image of Flower">
-                <figcaption> Pink Flower Tree </figcaption>
-              </figure>
-              <figure class="featured-img-style" >
-                <img src="./Flower Asset/pngwing 6.png" alt="Image of Flower">
-                <figcaption> Pink Flower Tree </figcaption>
-              </figure>
-              <figure class="featured-img-style" >
-                <img src="./Flower Asset/pngwing 7.png" alt="Image of Flower">
-                <figcaption> Pink Flower Tree </figcaption>
-              </figure>
-        </div>
-    </section> -->
-    <!-- ENd of Our Featured Flowers section -->
+    <!-- End of Banner section -->
     <!-- ------------second section head line---------- -->
 <section>
     <div class="second-width">
@@ -83,6 +63,24 @@
     </div>
 </section>
 <!-- -----------------------features photo box end-------------------- -->
+<!-- Start of Services -->
+<Section class="services">
+    <div class="services-img">
+        <div>
+        <img src="./Flower Asset/Group 57.png" alt="">
+        <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div>
+            <img src="./Flower Asset/Group 58.png" alt=" ">
+            <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+            <img src="./Flower Asset/Group 59.png" alt="">
+            <p>24/7 Free Support.</p>
+        </div>
+    </div>
+</Section>
+<!-- End of services -->
 <!-- start Hot deals section -->
 <section class="hot-deals">
     <div class="hot-deals-div">
@@ -108,6 +106,39 @@
     </div>
 </section>
 <!-- End instagram Section -->
+<!-- start of best selling  product -->
+<section class="best-selling">
+    <div class="bs-text">
+        <h3 class="bs-heading">Our <span class="bs-best">Best Selling</span> Product</h3>
+        <p class="bs-text-color">100% organic and hand made pot will be provided. You can check out  </p>
+        <p class="bs-text-color">Our delivery partner will delivered safely</p>
+        <button class="bs-button">Buy Now</button>
+    </div>
+   <div class="bs-div">
+    <div>
+        <img  class="bs-1"  src="./Flower Asset/bs-8.jpeg" alt="">
+        <p>Water Lily Bouquet</p>
+    </div>
+    <div>
+        <img class="bs-2" src="./Flower Asset/bs-2.jpg" alt="">
+        <p>American Rose Bouquet </p>
+    </div>
+    <div>
+        <img class="bs-3" src="./Flower Asset/bs-4.jpg" alt="">
+        <p>White and Red Rose Bouquet</p>
+    </div>
+   </div>
+</section>
+<!-- end of best selling product -->
+<!-- start latest deals section -->
+<section class="latest-deals">
+    <div class="latest-deals-div">
+        <h2 class="latest-deals-headinhg">Get The Latest Deals</h2>
+        <p class="latest-deals-para">$30 coupon for first shopping</p>
+        <div> <input class="input" placeholder="Enter your email here...." type="text"> <button class="subscribe">Subscribe</button>`</div>
+      </div>
+</section>
+<!-- End latest deals section -->
 <!-- start of footer -->
 <footer class="footer-section">
     <h1 class="footer-heading"><span class="footer-flower">Flower</span>Shop</h1>
